--- a/pages/mocity.html
+++ b/pages/mocity.html
@@ -74,7 +74,7 @@
       <p id="longitude">Longitude: </p>
     </div>
   
-    <img src="/images/mocity.png" width="80%">
+    <img src="/images/mocity.PNG" width="80%">
   </div>
     
   
